# syndesi

./: .gitignore  README.md  data.py  main.py  main_deepspeed.py  model.py  modules.py  modules_deepspeed.py  pyproject.toml  run_training.sh  slurm_training.sh  tokenizer.py  train.py
conf/: config.yaml
conf/experiment/: finetune_chemberta.yaml  finetune_mamba.yaml  pretrain.yaml
